tweaks to make a more narrow browser window look less ugly by preventing description text from overlapping onto meta footer

--- a/client/css/_hangout_card.scss
+++ b/client/css/_hangout_card.scss
@@ -25,7 +25,11 @@
   }
   .hangout-meta {
     position: absolute;
-    bottom: 10px;
+    bottom: 0px;
+    padding-top: 0px;
+    margin-top: 0px;
+    padding-bottom: 10px;
+    background: white;
   }
   button { 
     display: inline;
@@ -62,8 +66,6 @@
     display: inline-block;
   }
   .rsvp-buttons {
-    position: relative;
-    top: 10px;
     display: none;
   }
 }
